# ic-engine

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  README.md  SKILL.md  compose.yml  install.yaml  pyproject.toml
agent-skills/claude-code/: INSTALL.md  SKILL.md  manifest-template.json
agent-skills/claude-desktop/: SKILL.md
agent-skills/hermes/: SKILL.md
agent-skills/openclaw/: INSTALL.md  SKILL.md
agent-skills/zeroclaw/: INSTALL.md  SKILL.md  SKILL.toml
bridge/investorclaw_bridge/: dashboard.py  provider_diagnostics.py  provider_routing.py  serve.py
bridge/investorclaw_bridge/mcp/: transport.py
bridge/investorclaw_bridge/mcp/tools/: __init__.py  portfolio.py
contract/: conformance-baseline-2026-04-25.txt  render.py  routes.toml
docs/: ENGINE.md  INSTALL_MODELS.md  WORKER_PROOF_LEDGER.md
harness/: CLAUDE_CODE_TEXT_HARNESS.md  DUAL_PATH_HARNESS_DESIGN.md  PHASE_STATUS.md  QUICK_START.md  README_PHASE3B.md  RUN_ON_TYPHON.md  V11_RESTORATION_PLAN.md  contract_check.py  device_matrix.py  orchestrator.py  provider_matrix.py  remediation.py  run_cross_runtime_pilot.py  setup_cerberus_ollama.sh  test_device_matrix.py  test_tier_execution.py  test_zeroclaw_orchestrator.py  v13_matrix_spec.txt  v13_matrix_spec.txt.pre-ipswap-bak  v13_typhon_enterprise_cicd.py  validate_devices.py
harness/agent_clients/: cli_adapter.py  gemma_client.py  hermes.py  openclaw.py  provider_factory.py  zeroclaw.py
quadlets/: ic-engine.container
src/clio/drift/: alarm.py  remap.py
src/clio/extract/: __init__.py  schema_map.py  vision.py
src/clio/track/: lineage.py
src/ic_engine/: __init__.py  cli.py  pipeline.py
src/ic_engine/commands/: _artifact_helpers.py  analyze_performance_polars.py  ask.py  auto_setup.py  bond_analyzer.py  cashflow.py  check_updates.py  concept_decline.py  dashboard-launch.sh  dashboard_deferred.py  eod_report.py  export_report.py  fa_discussion.py  fetch_analyst_recommendations_parallel.py  fetch_holdings.py  fetch_market_news.py  fetch_portfolio_news.py  fixed_income_analysis.py  ic_holdings_run.py  llm-config.md  llm_config.py  lookup.py  market_snapshot.py  model_guardrails.py  news_fetch_planner.py  ollama_model_config.py  optimize.py  peer_analysis.py  performance_window.py  performance_window_cache.py  portfolio_analyzer.py  portfolio_complete.py  portfolio_switcher.py  rebalance_tax.py  scenario.py  session_init.py  stonkmode_control.py  whatchanged.py
src/ic_engine/commands/stages/: __init__.py  analyst_stage.py  bonds_stage.py  cashflow_stage.py  holdings_stage.py  news_stage.py  optimization_stage.py  peer_analysis_stage.py  performance_stage.py  synthesis_stage.py
src/ic_engine/config/: command_builders.py  config_loader.py  data_transform_rules.json  deployment_modes.py  env_loader.py  feature_manager.py  guardrail_enforcer.py  help_text.py  path_resolver.py  pipeline_config.json  portfolio_manager.py  portfolio_sizer.py  schema.py  schema_v2_pydantic.py  user_messages.py  venv_manager.py
src/ic_engine/internal/: README_ETLANTIS_INTEGRATION.md  README_STAGES.md  data_downloader.py  data_extractor.py  data_transformer.py  holdings_loader.py  litellm_consultation.py  metrics_wrapper.py  performance_timer.py  pipeline.py  pipeline_monitoring.py  stage_cache.py  stages.py  test_data_stages.py  test_pipeline.py  tier3_enrichment.py
src/ic_engine/market_data/: __init__.py  capability_matrix.py  enums.py  router.py  symbology.py
src/ic_engine/models/: cdm6_portfolio.py  cdm_portfolio.py  context_budget.py  financial_query_router.py  holdings.py  models.py
src/ic_engine/providers/: __init__.py  broker_detector.py  fetch_bond_data.py  fetch_nasdaq_ftp_symbols.py  futures_spec.py  massive_surface.py  price_panel.py  price_provider.py  yf_disk_cache.py
src/ic_engine/providers/tesseract/: __init__.py  facade.py  ingestion.py  models.py  parquet_transport.py  sync_state.py
src/ic_engine/rendering/: artifact_generator.py  compact_serializers.py  disclaimer_wrapper.py  dr_stonk.py  eod_email_template.py  interactive_output.py  progress.py  pwa_generator.py  render_consultation_card.py  stonkmode.py  stonkmode_avatars.py  stonkmode_pairings.py  stonkmode_personas.py  template_engine.py
src/ic_engine/rendering/pwa/: dashboard-full.html  dashboard-integrated.html  dashboard.html  manifest.json  service-worker.js
src/ic_engine/rendering/templates/: eod_email.html  performance_report.html
src/ic_engine/runtime/: __init__.py  bootstrap.py  envelope.py  envelope_cache.py  environment.py  full_run.py  narrator.py  router.py  subprocess_runner.py
src/ic_engine/services/: consolidate_portfolios.py  consultation_policy.py  context_window_monitor.py  extract_pdf.py  fuzzy_deduplication.py  pdf_extraction_dual_mode.py  portfolio_utils.py  summary_utils.py
src/ic_engine/setup/: eod_scheduler.py  first_run_check.py  hardware.py  identity_updater.py  installer.py  setup_wizard.py  update_checker.py
src/ic_engine/workers/: background_enricher.py
tests/: test_auto_bootstrap_holdings.py  test_cdm_consumer_fallbacks.py  test_claude_plugin_contracts.py  test_command_contracts.py  test_compact_serializers.py  test_consultation_policy.py  test_context_budget.py  test_cross_runtime_pilot.py  test_data_quality.py  test_dependency_consistency.py  test_deployment_modes.py  test_enricher_lifecycle.py  test_env_loader.py  test_envelope_cache.py  test_fingerprint.py  test_full_run.py  test_hardware.py  test_market_data.py  test_market_news.py  test_market_snapshot.py  test_massive_futures.py  test_narrator.py  test_normalization.py  test_normalize.py  test_orchestrator_path_b.py  test_performance_window.py  test_performance_window_incremental.py  test_pipeline.py  test_portfolio_market_combined.py  test_provider_diagnostics.py  test_router.py  test_setup_wizard_keys.py  test_stonkmode.py  test_svg_cards.py  test_syntax.py  test_tesseract.py  test_track.py  test_update_checker.py  test_user_messages.py
tests/fixtures/: sample_portfolios.py
tools/: publish-arm64.sh
(+6 files in other folders)
