[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ic-engine"
version = "2.6.3"
description = "Python portfolio-analysis library powering the InvestorClaw skill ecosystem. Consumed by claws-runtime and Claude Code adapters. FINOS CDM 5.x inspired data model."
license = { text = "Apache 2.0 Dual License" }
requires-python = ">=3.10"
readme = "README.md"
keywords = ["portfolio", "finance", "finos", "cdm", "openclaw", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "clio @ git+https://gitlab.com/argonautsystems/clio.git@v0.1.0",
    "polars>=0.20.0",
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
    "yfinance>=0.2.35",
    "requests>=2.31.0",
    "finnhub-python>=1.4.3",
    "polygon-api-client>=1.14.0",
    "ratelimit>=2.2.1",
    "newsapi-python>=0.2.6",
    "pdfplumber>=0.9.0",
    "pypdf2>=3.0.0",
    "pdfminer-six>=20221105",
    "tabula-py>=2.3.0",
    "camelot-py>=0.11.0",
    "fastexcel>=0.19.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.1",
    "PyPortfolioOpt>=1.5.5",
    "cvxpy>=1.3.0,<2.0",
    "numpy>=1.22,<2",
    "scipy>=1.10.0",
    "empyrical-reloaded>=0.5.10",
    "matplotlib>=3.7.0",
    "litellm>=1.48.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rapidfuzz>=3.0.0",
    "Jinja2>=3.1.0",
    "premailer>=3.10.0",
    "pyyaml>=6.0",
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
    "orjson>=3.9.0",
    "python-dotenv>=1.0.0",
    "packaging>=21.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

[project.scripts]
investorclaw = "ic_engine.cli:main"

[project.urls]
Homepage = "https://gitlab.com/argonautsystems/ic-engine"
Repository = "https://gitlab.com/argonautsystems/ic-engine"
Issues = "https://gitlab.com/argonautsystems/ic-engine"
Spec = "https://gitlab.com/argonautsystems/InvestorClaw/-/blob/main/docs/IC_DECOMPOSITION_SPEC.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.setuptools.packages.find]
where = ["src"]

# Ship runtime asset bundles inside built wheels. Without this, the
# stonkmode-avatars manifest + SVGs land in the source tree but not in
# `pip install`/uv-installed copies, and avatar_manifest() raises
# FileNotFoundError for installed users.
[tool.setuptools.package-data]
ic_engine = [
    "assets/stonkmode-avatars/manifest.json",
    "assets/stonkmode-avatars/*.svg",
    "rendering/pwa/manifest.json",
    "rendering/pwa/sw.js",
    "rendering/pwa/*.html",
    "rendering/pwa/*.css",
    "rendering/pwa/*.js",
    "rendering/pwa/assets/**/*",
]

[tool.uv]
python-preference = "managed"
required-version = ">=0.5"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",
    "E402",
    "E741",
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["F811", "F401"]
