[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clio"
version = "0.1.0"
description = "Foundation library for AI-driven semantic ETL: extraction, tracking, drift detection. Substrate under ic-engine, etlantis, and successor domain libraries."
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
readme = "README.md"
keywords = ["etl", "extraction", "lineage", "drift-detection", "vision-llm", "schema-mapping"]
authors = [
    { name = "Jason Perlow", email = "jperlow@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    # Vision extraction (clio.extract.vision — Phase 1.5a lift)
    "pymupdf>=1.24.0",
    "pillow>=10.0.0",
    "litellm>=1.48.0",
    # Schema mapping (clio.extract.schema_map — Phase 1.5b lift, deps preregistered)
    "sentence-transformers>=2.2.0",
    # Normalization (clio.extract.normalize — Phase 1.5b lift)
    "rapidfuzz>=3.0.0",
    # Tracking + drift (clio.track.* + clio.drift.* — Phase 1.5b new)
    "polars>=0.20.0",
    "pyarrow>=12.0.0",
    # Cross-cutting
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://gitlab.com/perlowja/clio"
Repository = "https://gitlab.com/perlowja/clio"
Issues = "https://gitlab.com/perlowja/clio/-/issues"
Spec = "https://gitlab.com/perlowja/InvestorClaw/-/blob/main/docs/IC_DECOMPOSITION_SPEC.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
python-preference = "managed"
required-version = ">=0.5"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",
    "E402",
    "E741",
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["F811", "F401"]
